--- a/product.css
+++ b/product.css
@@ -4,19 +4,19 @@ body{
 .nav{
     outline: 2px solid grey;
     height: 50px;
+    
 }
 .container{
     width: 100%;
     display: flex;
- 
-    justify-content: space-between;
+
     
 }
 .side_nav{
    
     width: 220px;
-   
-    height: calc(100vh - 50px);
+   position: fixed;
+    height: 100%;
     border-right: 2px solid grey;
  
    
@@ -24,7 +24,8 @@ body{
 .main{
    
     width: 100%;
-    height: 500px;
+    margin-left: 220px;
+    
 }
 .side_nav>ul{
     list-style-type: none;
@@ -96,8 +97,10 @@ body{
 .record{
     border: 1px solid black;
     width: 80%;
+    height: 10px;
+   
     margin-left: 50px;
-    height: 142px;
+    
     margin-top: 10px;
 
 }
@@ -118,4 +121,21 @@ body{
     
     position: relative;
     top: -190px;
+}
+.more{
+    width: 50%;
+    height: 50%;
+    display: none;
+    max-width: 350px;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    
+    padding: 50px;
+    font: 1em sans-serif;
+    margin: auto;
+    border: 1px solid red;
+    background-color: white;
+    border-radius: 5px;
+
 }
